<resources>
    <string name="app_name">My Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_the_right_city">Choose the right city ?</string>
    <string name="london">London</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="rome">Rome</string>
    <string name="paris">Paris</string>
    <string name="score">Score:</string>
    <string name="page">Page:</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="quizapp">QuizApp</string>
</resources>
