<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:id="@+id/ll_request_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_question_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/page"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/score"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="20dp" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_question"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_request_response"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/custom_blue">

                <ImageView
                    android:id="@+id/iv_question"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/iv_question"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/choose_the_right_city"
                    android:textSize="25sp"
                    android:textColor="@color/custom_light_blue"
                    android:padding="4dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/ll_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/cv_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="20dp">

            <Button
                android:id="@+id/bt_london"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/london"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/bt_amsterdam"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/amsterdam"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/bt_rome"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/rome"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/bt_paris"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:text="@string/paris"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
